# DB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README_DB.md  docker-compose.yml  functional_test.py  run_all_tests.bat  run_all_tests.sh  Отчёт Кейс Чемпионат.docx
docs/: architecture.md  protocol.txt
include/db/: native_client.h
publish/linux-x64/: customdb_server
scripts/: build_full.bat  build_full.sh
src/app/: server_entry.cpp
src/client/: native_client.cpp
src/gui/: App.xaml  App.xaml.cs  DbWorkbench.Client.csproj  Program.cs  QueryWorkbench.xaml  QueryWorkbench.xaml.cs  README.md  run_gui.ps1
src/query/: sql_engine.cpp  sql_engine.hpp  text_tools.cpp  text_tools.hpp
src/storage/: catalog_store.cpp  catalog_store.hpp
src/wire/: server_runtime.cpp  server_runtime.hpp  socket_compat.cpp  socket_compat.hpp
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
